# EDIFIA

./: .gitignore  AGENT_REPRISE.md  index.html  package-lock.json  package.json  playwright.config.ts
edifia-dsl/: __init__.py  pyproject.toml
edifia-dsl/engine/: __init__.py  compliance_engine.py  operators.py  registry.py  resolver.py
edifia-dsl/models/: __init__.py  project_context.py  rule.py
edifia-dsl/parser/: __init__.py  yaml_parser.py
edifia-dsl/reporters/: __init__.py  html_reporter.py  json_reporter.py
edifia-dsl/rules/dtu/: DTU-ASC-001.yml  DTU-CHAUF-001.yml  DTU-COUV-001.yml  DTU-ECRAN-001.yml  DTU-ELEC-001.yml  DTU-ETANC-001.yml  DTU-FOSS-001.yml  DTU-GAZ-001.yml  DTU-ISOL-001.yml  DTU-MACON-001.yml  DTU-MENU-001.yml  DTU-PLUMB-001.yml  DTU-RADON-001.yml  DTU-STRUCT-001.yml  DTU-VENT-001.yml
edifia-dsl/rules/incendie/: INC-ASC-001.yml  INC-ASC-002.yml  INC-COMPA-001.yml  INC-DESE-001.yml  INC-DESE-002.yml  INC-DETECT-001.yml  INC-ECLA-001.yml  INC-ERP-001.yml  INC-EXTIN-001.yml  INC-GAZ-001.yml  INC-ISSUE-001.yml  INC-ISSUE-002.yml  INC-MATER-001.yml  INC-PARA-001.yml  INC-REAC-001.yml
edifia-dsl/rules/pmr/: PMR-ACC-001.yml  PMR-ACC-002.yml  PMR-CIRC-001.yml  PMR-CIRC-002.yml  PMR-PORTE-001.yml  PMR-SANI-001.yml  PMR-SEUIL-001.yml  PMR-SEUIL-002.yml  PMR-SIGNAL-001.yml  PMR-STATION-001.yml
edifia-dsl/rules/re2020/: RE2020-ATT-001.yml  RE2020-BBIO-001.yml  RE2020-BBIO-002.yml  RE2020-BBIO-003.yml  RE2020-BIO-001.yml  (+10 more)
edifia-dsl/tests/: __init__.py  test_engine.py  test_integration.py  test_parser.py  test_registry.py  test_sprint2.py
(+149 files in other folders)
